--- a/Notation/App.xaml
+++ b/Notation/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="Notation.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Notation"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:Notation">
     <Application.Resources>
          
     </Application.Resources>
